# finite-automata-model-checker

./: Automaton.cpp  Automaton.h  CMakeLists.txt  Input1.jff  Input4.jff  InputFile.py  JFLAP.cpp  JFLAP.h  main.cpp  main.py
Tests/: IntersectionTests.cpp  NFA.cpp  PathSearch.cpp  PathSearch2.cpp  PathSearch3.cpp  Simulate.cpp  SystemLevel.cpp
doc/: Makefile  WrightSources.bib  paper.tex  uml.class.violet
jflap/: DFA_Model.jff  DFA_Spec.jff  Input1.jff  Input2.jff  Input3.jff
python/: JFLAPParser.py  Model.py  main.py
